--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -265,6 +265,9 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -312,6 +315,9 @@
   }
   .left-6 {
     left: calc(var(--spacing) * 6);
+  }
+  .z-0 {
+    z-index: 0;
   }
   .z-10 {
     z-index: 10;
@@ -442,6 +448,9 @@
   .hidden {
     display: none;
   }
+  .h-\[250px\] {
+    height: 250px;
+  }
   .h-\[300px\] {
     height: 300px;
   }
@@ -489,6 +498,9 @@
   }
   .w-\[100\%\] {
     width: 100%;
+  }
+  .w-\[250px\] {
+    width: 250px;
   }
   .w-\[400px\] {
     width: 400px;
@@ -551,6 +563,9 @@
   }
   .justify-start {
     justify-content: flex-start;
+  }
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
   }
   .space-x-4 {
     :where(& > :not(:last-child)) {
@@ -680,6 +695,15 @@
   .bg-gradient-to-tr {
     --tw-gradient-position: to top right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .bg-\[url\(\'\.\/src\/assets\/images\/John-currin-stamford-after-brunch\.png\'\)\] {
+    background-image: url('./src/assets/images/John-currin-stamford-after-brunch.png');
+  }
+  .bg-\[url\(\'\/assets\/images\/john-currin-stamford-artery\.jpg\'\)\] {
+    background-image: url('/assets/images/john-currin-stamford-artery.jpg');
+  }
+  .bg-\[url\(\'\/assets\/images\/john-currin-stamford-artery\.png\'\)\] {
+    background-image: url('/assets/images/john-currin-stamford-artery.png');
   }
   .bg-\[url\(\'\/public\/assets\/images\/Stamford\%20after\%20Brunch\.png\'\)\] {
     background-image: url('/public/assets/images/Stamford%20after%20Brunch.png');
@@ -987,6 +1011,9 @@
   .bg-center {
     background-position: center;
   }
+  .bg-top {
+    background-position: top;
+  }
   .bg-no-repeat {
     background-repeat: no-repeat;
   }
@@ -1022,6 +1049,9 @@
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
+  }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
   }
   .text-center {
     text-align: center;
@@ -1118,6 +1148,9 @@
   }
   .opacity-0 {
     opacity: 0%;
+  }
+  .opacity-30 {
+    opacity: 30%;
   }
   .opacity-100 {
     opacity: 100%;
@@ -1327,6 +1360,11 @@
       max-width: 400px;
     }
   }
+  .sm\:flex-row {
+    @media (width >= 40rem) {
+      flex-direction: row;
+    }
+  }
   .sm\:items-center {
     @media (width >= 40rem) {
       align-items: center;
@@ -1479,6 +1517,11 @@
   .md\:flex-row {
     @media (width >= 48rem) {
       flex-direction: row;
+    }
+  }
+  .md\:items-center {
+    @media (width >= 48rem) {
+      align-items: center;
     }
   }
   .md\:items-start {
