--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -517,6 +517,9 @@
     --tw-gradient-position: to top right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
+  .bg-\[url\(\'public\/assets\/images\/John-currin-stamford-after-brunch\.png\'\)\] {
+    background-image: url('public/assets/images/John-currin-stamford-after-brunch.png');
+  }
   .from-blue-100 {
     --tw-gradient-from: var(--color-blue-100);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
@@ -1016,6 +1019,9 @@
   .bg-contain {
     background-size: contain;
   }
+  .bg-cover {
+    background-size: cover;
+  }
   .bg-clip-text {
     background-clip: text;
   }
@@ -1098,6 +1104,9 @@
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
+  }
+  .text-blue-300 {
+    color: var(--color-blue-300);
   }
   .text-blue-800 {
     color: var(--color-blue-800);
@@ -1408,6 +1417,16 @@
   .dark\:bg-orange-400 {
     @media (prefers-color-scheme: dark) {
       background-color: var(--color-orange-400);
+    }
+  }
+  .dark\:text-blue-300 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-blue-300);
+    }
+  }
+  .dark\:text-blue-600 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-blue-600);
     }
   }
   .dark\:text-blue-800 {
